<resources>
    <string name="app_name">DCM Schichtplan</string>
    <string name="base_url">http://192.168.56.1:8080</string>
    <string name="company">Hotel in Focus</string>
    <string name="customer_nr">Kundennr.: 47110815</string>

    <string name="menu_planned">Dienstplan</string>
    <string name="menu_clocking">Stempeln</string>
    <string name="menu_abrequest">Fehlzeiten Antrag</string>
    <string name="menu_actual">Ist-Zeiten</string>
    <string name="menu_contact">Kontakt</string>
    <string name="menu_pwchange">Passwort ändern</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_footer">© 2021 - DCM-App - Customer In Focus</string>
    <string name="menu_licences">Lizenzen</string>
    <string name="menu_web">Web-Version</string>
    <string name="menu_day_full">1 Tag</string>
    <string name="menu_day_half"><![CDATA[&#189; Tag]]></string>

    <string name="hint_oldpw">Altes Passwort</string>
    <string name="hint_pwconfirm">Passwort wiederholen</string>
    <string name="hint_pwnew">Neues Passwort</string>
    <string name="hint_nextweek">Nächste Woche</string>
    <string name="hint_prevweek">Vorherige Woche</string>
    <string name="hint_company">Unternehmen wählen</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_comment">Bemerkung</string>
    <string name="hint_abtype">Fehlzeit Typ</string>
    <string name="btn_abcheck">Antrag prüfen</string>
    <string name="hint_firstdayofweek">Erster Tag der Woche</string>

    <string name="btn_attach">Anhang Anfügen</string>
    <string name="btn_pwchange">Passwort ändern</string>
    <string name="btn_login">Anmelden</string>
    <string name="btn_sendRequest">Antrag Stellen</string>
    <string name="btn_attach_change">Anhang ändern</string>
    <string name="btn_remove_attachment">Anhang entfernen</string>

    <string name="txt_startDate">Von Datum:</string>
    <string name="txt_stopDate">Bis Datum:</string>
    <string name="txt_goes">Geht</string>
    <string name="txt_top10">Die letzten 10 Buchungen</string>
    <string name="txt_comes">Kommt</string>
    <string name="txt_shift1">Schicht 2</string>
    <string name="txt_shift2">Schicht 1</string>
    <string name="txt_date">Datum</string>
    <string name="txt_holiday_head">Verbleibende Urlaubstage</string>
    <string name="txt_holiday_prevyear">Aus Vorjahr:</string>
    <string name="txt_holiday_thisyear">Dieses Jahr:</string>
    <string name="txt_holiday_total">Gesamt Anspruch:</string>
    <string name="txt_holiday_corrections">Korrekturen:</string>
    <string name="txt_holiday_taken">Geplant / Genommen:</string>
    <string name="txt_holiday_open">Rest offen:</string>
    <string name="txt_holiday_request">Dieser Antrag:</string>
    <string name="txt_holiday_result">Im gewünschtem Zeitraum können Sie gerne Urlaub beantragen.</string>
    <string name="txt_holiday_remaining">Verbleibend:</string>
    <string name="txt_company">Betriebsstätte</string>

    <string name="dialog_clockingStatusAlert">Sie haben schon eingestempelt. Wollen Sie nochmals Einstempeln?</string>
    <string name="decline">Abbrechen</string>
    <string name="accept">Ja</string>
    <string name="dialog_sendRequest">Fehlzeiten Antrag jetzt senden?</string>

</resources>