<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.PasswordChangeFragment"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@drawable/ic_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frag_time_fab_prev"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                app:fabSize="mini"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/hint_prevweek"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@drawable/ic_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frag_time_fab_next"
                app:layout_constraintTop_toTopOf="@+id/frag_time_fab_prev"
                app:layout_constraintEnd_toEndOf="parent"
                app:fabSize="mini"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/hint_nextweek"
                app:layout_constraintBottom_toBottomOf="@+id/frag_time_fab_prev" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/frag_time_in_date"
                app:startIconDrawable="@drawable/ic_plan"
                app:layout_constraintStart_toEndOf="@+id/frag_time_fab_prev"
                app:layout_constraintEnd_toStartOf="@+id/frag_time_fab_next"
                app:layout_constraintTop_toTopOf="@+id/frag_time_fab_prev"
                app:layout_constraintBottom_toBottomOf="@+id/frag_time_fab_prev"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                android:hint="@string/hint_firstdayofweek"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_time_et_date" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

        <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp">

            <TextView
                    android:text="@string/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_margin="8dp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp">

            <TextView
                    android:text="@string/txt_shift2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_margin="8dp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp">

            <TextView
                    android:text="@string/txt_shift1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_margin="8dp"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_time_progressbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/frag_time_recview"
                    android:layout_margin="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>