<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.PasswordChangeFragment"
        android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    tools:text="1. Januar 1900"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_clocking_txt_date"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2" />

            <TextView
                    tools:text="00:00 Uhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_clocking_txt_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.8" />

            <View
                    android:id="@+id/btmsht_abrequest_devider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/dividerVertical"
                    app:layout_constraintTop_toBottomOf="@+id/frag_clocking_txt_date"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:src="@drawable/ic_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    android:id="@+id/frag_clocking_btn_comes"
                    app:layout_constraintTop_toBottomOf="@+id/btmsht_abrequest_devider"
                    app:layout_constraintStart_toStartOf="@+id/frag_clocking_txt_date"
                    app:layout_constraintEnd_toEndOf="@+id/frag_clocking_txt_date"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/green_700"
                    android:contentDescription="@string/txt_comes"
                    android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:src="@drawable/ic_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:borderWidth="0dp"
                    android:id="@+id/frag_clocking_btn_goes"
                    app:layout_constraintTop_toBottomOf="@+id/btmsht_abrequest_devider"
                    app:layout_constraintStart_toStartOf="@+id/frag_clocking_txt_time"
                    app:layout_constraintEnd_toEndOf="@+id/frag_clocking_txt_time"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/red_500"
                    android:focusable="true"
                    android:contentDescription="@string/txt_goes" />

            <TextView
                    android:text="@string/txt_comes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_clocking_txt_comes"
                    app:layout_constraintEnd_toEndOf="@+id/frag_clocking_btn_comes"
                    app:layout_constraintStart_toStartOf="@+id/frag_clocking_btn_comes"
                    app:layout_constraintTop_toBottomOf="@+id/frag_clocking_btn_comes"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />

            <TextView
                    android:text="@string/txt_goes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_clocking_txt_goes"
                    app:layout_constraintEnd_toEndOf="@+id/frag_clocking_btn_goes"
                    app:layout_constraintStart_toStartOf="@+id/frag_clocking_btn_goes"
                    app:layout_constraintTop_toBottomOf="@+id/frag_clocking_btn_goes"
                    android:layout_marginTop="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
            android:text="@string/txt_top10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/frag_clocking_txt_top10"
            android:textStyle="bold"
            android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_clocking_recview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>